--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
                 <div class="footer">
                     <div class="comp">
-                        <h2>Company Info</h2>
+                        <h2>Company</h2>
                         <p>About us</p>
                         <p>Carrier</p>
                         <p>We are hiring</p>
@@ -384,7 +384,7 @@
                         <p>Blog</p>
                     </div>
     
-                    <div>
+                    <div class="get-in-touch-main-div">
                         <h2>Get In Touch</h2>
                         <div class="get-in-touch">
                             <img src="phone-call.png" alt="phone">
@@ -402,17 +402,18 @@
                 </div>
 
 
-                <div class="rights" flex>
-                    <div>
-                        <p>Made With Love By Figmaland All Rights Reserved</p>
-                    </div>
+                <!-- <div class="copy-rights">
+                   <div>
+                    <p>Made with Love</p>
+                   </div>
 
-                    <div class="social-media-icons">
-                        <img src="facebook.png" alt="facebook">
-                        <img src="instagram.png" alt="insta">
-                        <img src="twitter.png" alt="twitter">
-                    </div>
-                </div>
+                   <div>
+                    <img src="instagram.png" alt="insta">
+                    <img src="facebook.png" alt="facebook">
+                    <img src="twitter.png" alt="twitter">
+                   </div>
+
+                </div> -->
 
 
 
